Migrate uniswap to matic

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,2 @@
-REACT_APP_NETWORK_ID="1"
-REACT_APP_NETWORK_URL=""
+REACT_APP_NETWORK_ID="8995"
+REACT_APP_NETWORK_URL="https://testnet2.matic.network" 
